firmware/old stuff/STM32_CUBE_IDE/.metadata/.plugins/org.eclipse.cdt.ui/START_STM32F469.build.log
17:53:29 **** Incremental Build of configuration Debug for project START_STM32F469 ****
make -j3 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DUSE_HAL_DRIVER -DSTM32F469xx -DDEBUG -c -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Middlewares/ST/STM32_USB_Device_Library/Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Inc -I../Drivers/CMSIS/Include -I../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FatFs/src -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:144:3: warning: implicit declaration of function 'BSP_LCD_InitEx'; did you mean 'BSP_SD_Init'? [-Wimplicit-function-declaration]
   BSP_LCD_InitEx(LCD_ORIENTATION_LANDSCAPE);
   ^~~~~~~~~~~~~~
   BSP_SD_Init
../Src/main.c:144:18: error: 'LCD_ORIENTATION_LANDSCAPE' undeclared (first use in this function)
   BSP_LCD_InitEx(LCD_ORIENTATION_LANDSCAPE);
                  ^~~~~~~~~~~~~~~~~~~~~~~~~
../Src/main.c:144:18: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:145:3: warning: implicit declaration of function 'BSP_LCD_Init'; did you mean 'BSP_SD_Init'? [-Wimplicit-function-declaration]
   BSP_LCD_Init() ;
   ^~~~~~~~~~~~
   BSP_SD_Init
../Src/main.c:146:3: warning: implicit declaration of function 'BSP_LCD_Clear' [-Wimplicit-function-declaration]
   BSP_LCD_Clear(((uint32_t) 0xFFFFFFFF));
   ^~~~~~~~~~~~~
make: *** [Src/subdir.mk:61: Src/main.o] Error 1
"make -j3 all" terminated with exit code 2. Build might be incomplete.

17:53:29 Build Failed. 2 errors, 3 warnings. (took 405ms)

